--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context="com.example.android.justjava.MainActivity" >
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        android:layout_marginBottom="16dp"
-        android:text="@string/QuantityHeader" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp"
+        tools:context="com.example.android.justjava.MainActivity">
 
-    <Button
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:text="@string/PlusButton"
-        android:layout_marginBottom="16dp"
-        android:onClick="increment" />
+        <TextView
+            style="@style/headerTextStyle"
+            android:text="@string/NameEditTextHeader" />
 
-    <TextView
-        android:id="@+id/quantity_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/QuantityValue"
-        android:textSize="16sp"
-        android:textColor="@android:color/black" />
+        <EditText
+            android:id="@+id/NameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:hint="@string/NameHint"
+            android:inputType="textCapWords" />
 
-    <Button
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:text="@string/MinusButton"
-        android:layout_marginTop="16dp"
-        android:onClick="decrement" />
+        <TextView
+            style="@style/headerTextStyle"
+            android:text="@string/ToppingsHeader" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/PriceHeader" />
+        <CheckBox
+            android:id="@+id/WhippedCreamCheckbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:paddingLeft="24dp"
+            android:text="@string/WhippedCreamCheckBox"
+            android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/price_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/PriceValue"
-        android:textSize="16sp"
-        android:textColor="@android:color/black" />
+        <CheckBox
+            android:id="@+id/ChocolateCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:paddingLeft="24dp"
+            android:text="@string/ChocolateCheckBox"
+            android:textSize="16sp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/OrderButtonName"
-        android:layout_marginTop="16dp"
-        android:onClick="submitOrder" />
+        <TextView
+            style="@style/headerTextStyle"
+            android:text="@string/QuantityHeader" />
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:onClick="decrement"
+                android:text="@string/MinusButton" />
+
+            <TextView
+                android:id="@+id/quantity_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/QuantityValue"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+            <Button
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:onClick="increment"
+                android:text="@string/PlusButton" />
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:onClick="submitOrder"
+            android:text="@string/OrderButtonName" />
+
+    </LinearLayout>
+</ScrollView>
